--- a/AstolfoBot/package.json
+++ b/AstolfoBot/package.json
@@ -12,10 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^14.3.0"
+    "dotenv": "^14.3.0",
+    "mysql2": "^2.3.3",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
+    "@types/hapi__joi": "^17.1.8",
     "@types/node": "^17.0.10",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
