--- a/astolfo-api/package.json
+++ b/astolfo-api/package.json
@@ -25,10 +25,13 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "connect-typeorm": "^1.1.4",
     "express-session": "^1.17.2",
+    "passport": "^0.5.2",
+    "passport-discord": "^0.1.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -44,6 +47,7 @@
     "@types/hapi__joi": "^17.1.8",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/passport-discord": "^0.1.5",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
