--- a/astolfo-api/package.json
+++ b/astolfo-api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "axios": "^0.25.0",
     "connect-typeorm": "^1.1.4",
     "express-session": "^1.17.2",
     "passport": "^0.5.2",
@@ -42,6 +43,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/hapi__joi": "^17.1.8",
