--- a/astolfo-dashboard/.gitignore
+++ b/astolfo-dashboard/.gitignore
@@ -5,6 +5,15 @@
 /.pnp
 .pnp.js
 
+# vscode
+# IDE - VSCode
+.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 # testing
 /coverage
 
