--- a/astolfo-api/package.json
+++ b/astolfo-api/package.json
@@ -27,7 +27,9 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.6",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.2.6",
     "axios": "^0.25.0",
     "connect-typeorm": "^1.1.4",
     "express-session": "^1.17.2",
