--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -18,11 +18,13 @@
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io-client": "^4.4.1",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@types/hapi__joi": "^17.1.8",
     "@types/node": "^17.0.10",
+    "@types/socket.io-client": "^3.0.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
   }
