--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "start": "node ./build/index.js",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "build": "tsc"
   },
   "keywords": [],
@@ -26,6 +27,7 @@
     "@types/node": "^17.0.10",
     "@types/socket.io-client": "^3.0.0",
     "nodemon": "^2.0.15",
+    "prettier": "2.5.1",
     "typescript": "^4.5.5"
   }
 }
