--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "start": "node ./build/index.js",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "build": "tsc"
   },
   "keywords": [],
