[backend] Format rules airbnb

--- a/astolfo-api/package.json
+++ b/astolfo-api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/websockets": "^8.2.6",
     "axios": "^0.25.0",
     "connect-typeorm": "^1.1.4",
+    "express": "^4.17.2",
     "express-session": "^1.17.2",
     "passport": "^0.5.2",
     "passport-discord": "^0.1.4",
@@ -39,6 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.4.1",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
@@ -55,11 +57,15 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
-    "prettier": "2.5.1",
+    "prettier": "^2.5.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
