--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -16,6 +16,8 @@
     "@hapi/joi": "^17.1.1",
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -26,6 +28,9 @@
     "@types/hapi__joi": "^17.1.8",
     "@types/node": "^17.0.10",
     "@types/socket.io-client": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
