--- a/astolfo-angular/package.json
+++ b/astolfo-angular/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "chart.js": "^3.7.0",
+    "ng2-charts": "^3.0.8",
     "prettier": "^2.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
