--- a/astolfo-angular/package.json
+++ b/astolfo-angular/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*{.ts,.html,.scss}\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
