--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^14.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
