--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,10 @@ updates:
     ignore:
       - dependency-name: "typescript"
       - dependency-name: "eslint"
+  - package-ecosystem: "npm"
+    directory: "/astolfo-bot"
+    schedule:
+      interval: "daily"
+    ignore:
+      - dependency-name: "typescript"
+      - dependency-name: "eslint"
