--- a/astolfo-api/package.json
+++ b/astolfo-api/package.json
@@ -21,7 +21,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^8.4.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.4.0",
@@ -31,10 +30,14 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.0",
+    "@sideway/address": "^4.1.3",
+    "@sideway/formula": "^3.0.0",
+    "@sideway/pinpoint": "^2.0.0",
     "axios": "^0.26.0",
     "connect-typeorm": "^1.1.4",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "joi": "^17.6.0",
     "passport": "^0.5.2",
     "passport-discord": "^0.1.4",
     "pg": "^8.7.3",
@@ -49,7 +52,6 @@
     "@nestjs/cli": "^8.2.2",
     "@nestjs/schematics": "^8.0.7",
     "@nestjs/testing": "^8.4.0",
-    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/hapi__joi": "^17.1.8",
