--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
+    "@sideway/address": "^4.1.3",
+    "@sideway/formula": "^3.0.0",
+    "@sideway/pinpoint": "^2.0.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
+    "joi": "^17.6.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "pg": "^8.7.3",
@@ -28,7 +31,6 @@
   "devDependencies": {
     "@types/hapi__joi": "^17.1.8",
     "@types/node": "^17.0.21",
-    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.8.0",
