--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -16,6 +16,7 @@
     "@sideway/address": "^4.1.3",
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
+    "axios": "^0.26.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -23,6 +24,7 @@
     "joi": "^17.6.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
+    "openai": "^2.0.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^4.4.1",
