--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -17,6 +17,7 @@
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
     "axios": "^0.27.2",
+    "discord-modals": "^1.3.7",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
