--- a/astolfo-api/package.json
+++ b/astolfo-api/package.json
@@ -28,13 +28,14 @@
     "@nestjs/platform-express": "^8.4.6",
     "@nestjs/platform-socket.io": "^8.4.6",
     "@nestjs/swagger": "^5.2.1",
-    "@nestjs/typeorm": "^8.0.4",
+    "@nestjs/typeorm": "8.1.2",
     "@nestjs/websockets": "^8.4.6",
     "@sideway/address": "^5.0.0",
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
     "axios": "^0.27.2",
     "connect-typeorm": "^1.1.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
@@ -46,7 +47,7 @@
     "rxjs": "^7.5.5",
     "socket.io": "^4.4.1",
     "swagger-ui-express": "^4.4.0",
-    "typeorm": "^0.2.45"
+    "typeorm": "0.3.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.6",
@@ -55,13 +56,13 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/hapi__joi": "^17.1.8",
-    "@types/jest": "27.4.1",
+    "@types/jest": "28.1.1",
     "@types/node": "^17.0.41",
     "@types/passport-discord": "^0.1.5",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
-    "eslint": "^8.2.0",
+    "eslint": "8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -69,15 +70,15 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.5.1",
+    "jest": "28.1.1",
     "prettier": "^2.6.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.2.3",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "28.0.4",
     "ts-loader": "^9.3.0",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.7.3"
   },
   "jest": {
     "moduleFileExtensions": [
