--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -17,11 +17,13 @@
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
     "discord-modals": "^1.3.7",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "humanize-duration": "^3.27.2",
     "joi": "^17.6.0",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@types/hapi__joi": "^17.1.8",
+    "@types/humanize-duration": "^3.27.1",
     "@types/node": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
