[discord-bot] added mc

--- a/astolfo-bot/package.json
+++ b/astolfo-bot/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "humanize-duration": "^3.27.2",
     "joi": "^17.6.0",
+    "minecraft-server-util": "^5.2.10",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "openai": "^3.0.0",
